# code-map

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: v0.2-spec.md
src/code_map/: __init__.py  cli.py  context.py  find.py  manifest.py  mirrors.py  outline.py  pagerank.py  query.py  readme.py  render.py  runner.py  schema.py  schema_cmd.py  source.py  status.py
src/code_map/extract/: __init__.py  python.py  rust.py  typescript.py
src/code_map/queries/: ATTRIBUTION.md  javascript.scm  python.scm  rust.scm  typescript.scm
tests/: test_build_e2e.py  test_cli_help.py  test_extract_python.py  test_extract_rust.py  test_extract_typescript.py  test_fixture_shape.py  test_manifest.py  test_mirrors.py  test_pagerank.py  test_query.py  test_query_perf.py  test_readme.py  test_refresh_incremental.py  test_render.py  test_render_cli.py  test_schema.py  test_v02_subcommands.py  test_v03_fixes.py
tests/fixtures/sample-poly/python/: a.py  b.py  c.py
tests/fixtures/sample-poly/rust/: Cargo.toml
tests/fixtures/sample-poly/rust/src/: a.rs  b.rs
tests/fixtures/sample-poly/typescript/: a.ts  tsconfig.json
tests/golden/: blast-radius-greet.json  callers-of-greet.json
